; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_xan.c_xan_huffman_decode.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_xan.c_xan_huffman_decode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AVERROR_INVALIDDATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32*, i32)* @xan_huffman_decode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xan_huffman_decode(i32* %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %20 = load i32*, i32** %8, align 8
  %21 = getelementptr inbounds i32, i32* %20, i32 1
  store i32* %21, i32** %8, align 8
  %22 = load i32, i32* %20, align 4
  store i32 %22, i32* %10, align 4
  %23 = load i32, i32* %10, align 4
  %24 = add nsw i32 %23, 22
  store i32 %24, i32* %11, align 4
  %25 = load i32*, i32** %8, align 8
  %26 = load i32, i32* %10, align 4
  %27 = mul nsw i32 %26, 2
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i32, i32* %25, i64 %28
  store i32* %29, i32** %12, align 8
  %30 = load i32, i32* %9, align 4
  %31 = sub nsw i32 %30, 1
  %32 = load i32, i32* %10, align 4
  %33 = mul nsw i32 %32, 2
  %34 = sub nsw i32 %31, %33
  store i32 %34, i32* %13, align 4
  %35 = load i32, i32* %11, align 4
  store i32 %35, i32* %14, align 4
  %36 = load i32*, i32** %6, align 8
  %37 = load i32, i32* %7, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds i32, i32* %36, i64 %38
  store i32* %39, i32** %15, align 8
  %40 = load i32*, i32** %6, align 8
  store i32* %40, i32** %16, align 8
  %41 = load i32*, i32** %12, align 8
  %42 = load i32, i32* %13, align 4
  %43 = call i32 @init_get_bits8(i32* %18, i32* %41, i32 %42)
  store i32 %43, i32* %17, align 4
  %44 = icmp slt i32 %43, 0
  br i1 %44, label %45, label %47

45:                                               ; preds = %4
  %46 = load i32, i32* %17, align 4
  store i32 %46, i32* %5, align 4
  br label %97

47:                                               ; preds = %4
  br label %48

48:                                               ; preds = %88, %47
  %49 = load i32, i32* %14, align 4
  %50 = icmp ne i32 %49, 22
  br i1 %50, label %51, label %89

51:                                               ; preds = %48
  %52 = call i32 @get_bits_left(i32* %18)
  %53 = icmp slt i32 %52, 1
  br i1 %53, label %54, label %56

54:                                               ; preds = %51
  %55 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %55, i32* %5, align 4
  br label %97

56:                                               ; preds = %51
  %57 = load i32, i32* %14, align 4
  %58 = sub nsw i32 %57, 23
  %59 = call i32 @get_bits1(i32* %18)
  %60 = load i32, i32* %10, align 4
  %61 = mul nsw i32 %59, %60
  %62 = add nsw i32 %58, %61
  store i32 %62, i32* %19, align 4
  %63 = load i32, i32* %19, align 4
  %64 = load i32, i32* %10, align 4
  %65 = mul nsw i32 2, %64
  %66 = icmp uge i32 %63, %65
  br i1 %66, label %67, label %69

67:                                               ; preds = %56
  %68 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %68, i32* %5, align 4
  br label %97

69:                                               ; preds = %56
  %70 = load i32*, i32** %8, align 8
  %71 = load i32, i32* %19, align 4
  %72 = zext i32 %71 to i64
  %73 = getelementptr inbounds i32, i32* %70, i64 %72
  %74 = load i32, i32* %73, align 4
  store i32 %74, i32* %14, align 4
  %75 = load i32, i32* %14, align 4
  %76 = icmp slt i32 %75, 22
  br i1 %76, label %77, label %88

77:                                               ; preds = %69
  %78 = load i32*, i32** %6, align 8
  %79 = load i32*, i32** %15, align 8
  %80 = icmp uge i32* %78, %79
  br i1 %80, label %81, label %83

81:                                               ; preds = %77
  %82 = load i32, i32* %7, align 4
  store i32 %82, i32* %5, align 4
  br label %97

83:                                               ; preds = %77
  %84 = load i32, i32* %14, align 4
  %85 = load i32*, i32** %6, align 8
  %86 = getelementptr inbounds i32, i32* %85, i32 1
  store i32* %86, i32** %6, align 8
  store i32 %84, i32* %85, align 4
  %87 = load i32, i32* %11, align 4
  store i32 %87, i32* %14, align 4
  br label %88

88:                                               ; preds = %83, %69
  br label %48

89:                                               ; preds = %48
  %90 = load i32*, i32** %6, align 8
  %91 = load i32*, i32** %16, align 8
  %92 = ptrtoint i32* %90 to i64
  %93 = ptrtoint i32* %91 to i64
  %94 = sub i64 %92, %93
  %95 = sdiv exact i64 %94, 4
  %96 = trunc i64 %95 to i32
  store i32 %96, i32* %5, align 4
  br label %97

97:                                               ; preds = %89, %81, %67, %54, %45
  %98 = load i32, i32* %5, align 4
  ret i32 %98
}

declare dso_local i32 @init_get_bits8(i32*, i32*, i32) #1

declare dso_local i32 @get_bits_left(i32*) #1

declare dso_local i32 @get_bits1(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
